before query db venues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.useTabStops": true
+    "editor.useTabStops": true,
+    "prettier.singleQuote": true,
+    "prettier.jsxSingleQuote": true,
 }
